Call AddToHomescreenDataFetcher::Observer callbacks when manifest fetch times out

This CL ensures that all of the AddToHomescreenDataFetcher::Observer callbacks
still get called when the manifest fetch times out. Previously
Observer::OnDidDetermineWebApkCompatibility() and
Observer::OnDataAvailable() were not called.

Observer::OnDidDetermineWebApkCompatibility() shows the dialog when WebAPKs are
enabled and the manifest fetch times out.
Observer::OnUserTitleAvailable() enables the text field in the add-to-homescreen
dialog.
Observer::OnDataAvailable() enables the add button in the add-to-homescreen
dialog.

BUG=647873
TEST=AddToHomescreenManagerTest#testAddWebappShortcutManifestFetchTimesOut

Review-Url: https://codereview.chromium.org/2342183002
Cr-Commit-Position: refs/heads/master@{#419796}

Former-commit-id: 67a9c9db813e7b963f0696dbad0b7c8da70c67be