chrome/browser/android/webapps/add_to_homescreen_data_fetcher.h
@@ -73,7 +73,7 @@ class AddToHomescreenDataFetcher
                              int minimum_icon_size_in_dp,
                              int ideal_splash_image_size_in_dp,
                              int minimum_splash_image_size_in_dp,
-                             bool check_installable,
+                             bool check_webapk_compatible,
                              Observer* observer);
 
   // Returns a callback which fetches the splash screen image to be stored for
@@ -94,8 +94,11 @@ class AddToHomescreenDataFetcher
 
   ~AddToHomescreenDataFetcher() override;
 
-  // WebContentsObserver
+  // WebContentsObserver:
   bool OnMessageReceived(const IPC::Message& message) override;
+
+  // Called if either InstallableManager or the favicon fetch takes too long.
+  void OnDataTimedout();
 
   // Called when InstallableManager finishes looking for a manifest and icon.
   void OnDidPerformInstallableCheck(const InstallableData& data);
@@ -111,8 +114,9 @@ class AddToHomescreenDataFetcher
   void CreateLauncherIconFromFaviconInBackground(
       const favicon_base::FaviconRawBitmapResult& bitmap_result);
 
-  // Creates the launcher icon from the given |icon|.
-  void CreateLauncherIconInBackground(const SkBitmap& raw__icon);
+  // Creates the launcher icon from the given |raw_icon|.
+  void CreateLauncherIcon(const SkBitmap& raw_icon);
+  void CreateLauncherIconInBackground(const SkBitmap& raw_icon);
 
   // Notifies the observer that the shortcut data is all available.
   void NotifyObserver(const SkBitmap& icon);
@@ -133,9 +137,9 @@ class AddToHomescreenDataFetcher
   const int minimum_splash_image_size_in_dp_;
 
   // Indicates whether to check WebAPK compatibility.
-  bool check_installable_;
-  bool is_waiting_for_installable_check_;
+  bool check_webapk_compatibility_;
   bool is_waiting_for_web_application_info_;
+  bool is_installable_check_complete_;
   bool is_icon_saved_;
   bool is_ready_;
 
